src/main/java/com/example/demo/error/ErrorCodeConstant.java
package com.example.demo.error;

public class ErrorCodeConstant {
	
	public static final String UNAUTHORIZED = "UNAUTHORIZED";
	public static final String INVALID_PARMETER = "INVALID_PARMETER";

}
